--- a/project.html
+++ b/project.html
@@ -16,8 +16,8 @@
 	<div class="row">
 		<div class="header col-sm-12 col-xs-12">
 			<ul>
-				<li class="listObject"><a href="file:///C:/Users/mb/Documents/projekt/about.html" target="_blank">About</a></li>
-				<li class="listObject"><a href="file:///C:/Users/mb/Documents/projekt/gallery.html" target="_blank">Gallery</a></li>
+				<li class="listObject"><a href="./about.html" target="_blank">About</a></li>
+				<li class="listObject"><a href="./gallery.html" target="_blank">Gallery</a></li>
 				<li class="listObject"><a href="mailto: djulovic.dzenita1999@gmail.com" target="_blank">Contact</a></li>
 			</ul>
 		</div>
