--- a/gallery.html
+++ b/gallery.html
@@ -23,37 +23,37 @@
 	
     <div class="row">
 	    <div class="mainOne col-sm-4 col-xs-4">
-	       <img class="image" src=".\images\img1.jpg" alt="Hljeb">
+	       <img class="image" src=".\photos\img1.jpg" alt="Hljeb">
 	    </div>
 	    <div class="mainOne col-sm-4 col-xs-4">
-	       <img class="image" src=".\images\img2.jpg" alt="Pile">
+	       <img class="image" src=".\photos\img2.jpg" alt="Pile">
 	     </div>
 	    <div class="mainOne col-sm-4 col-xs-4">
-	       <img class="image" src=".\images\img3.jpg" alt="Grah">
+	       <img class="image" src=".\photos\img3.jpg" alt="Grah">
         </div>
     </div>
 
     <div class="row">
         <div class="mainTwo col-sm-3 col-xs-3">
-           <img class="image" src=".\images\img4.jpg" alt="Burek">
+           <img class="image" src=".\photos\img4.jpg" alt="Burek">
         </div>
         <div class="mainTwo col-sm-6 col-xs-6">
-           <img class="image" src=".\images\img5.jpg" alt="Cevapi">
+           <img class="image" src=".\photos\img5.jpg" alt="Cevapi">
         </div>
         <div class="mainTwo col-sm-3 col-xs-3">
-           <img class="image" src=".\images\img6.jpg" alt="Kahva">
+           <img class="image" src=".\photos\img6.jpg" alt="Kahva">
         </div>
     </div>
 
     <div class="row">
         <div class="mainThree col-sm-4 col-sm-4">
-           <img class="image" src=".\images\img7.jpg" alt="Tulumbe">
+           <img class="image" src=".\photos\img7.jpg" alt="Tulumbe">
         </div>
         <div class="mainThree col-sm-4 col-sm-4">
-           <img class="image" src=".\images\img8.png" alt="Baklava">
+           <img class="image" src=".\photos\img8.png" alt="Baklava">
         </div>
         <div class="mainThree col-sm-4 col-xs-4">
-            <img class="image" src=".\images\img9.jpg" alt ="Kadaif">
+            <img class="image" src=".\photos\img9.jpg" alt ="Kadaif">
         </div>
     </div> 
 </div>
